--- a/recrutaboot/pubspec.yaml
+++ b/recrutaboot/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.2
+  go_router: ^14.2.8
 
 dev_dependencies:
   flutter_test:
