--- a/recrutaboot/pubspec.yaml
+++ b/recrutaboot/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   go_router: ^14.2.8
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/banner.jpg
+    - assets/images/githubLogo.png
+    - assets/images/linkedinIcon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
