--- a/recrutaboot/pubspec.yaml
+++ b/recrutaboot/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
     - assets/images/banner.jpg
     - assets/images/githubLogo.png
     - assets/images/linkedinIcon.png
-  #   - images/a_dot_ham.jpeg
+    - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
